[2.2.0-SNAPSHOT] ClickHouseHealthIndicator URI config parameter integrated Configuration jdbcUrl -> url parameter refactored